--- a/语言文字.md
+++ b/语言文字.md
@@ -13,3 +13,28 @@
 * 《高中英语词汇主题分类学习手册》 作  者 : 韦韡编著 出版日期 : 2020.06
 * 《实境图解新托业分类词汇》 作  者 : 林约瑟芬，陈昭纯著 出版日期 : 2018.04
 * 《最新英语口语必备 流行口语分类词汇》 作  者 : 张国海主编 出版日期 : 2000.09
+
+# 分词
+
+```
+  function tokenizeJA(text) {
+    var it = Intl.v8BreakIterator(['ja-JP'], {type:'word'})
+    it.adoptText(text)
+    var words = []
+  
+    var cur = 0, prev = 0
+  
+    while (cur < text.length) {
+      prev = cur
+      cur = it.next()
+      words.push(text.substring(prev, cur))
+    }
+  
+    return words
+  
+  }
+  
+  console.log(tokenizeJA("我们的移动设备和各种后端语言都支持相同的数据。"))
+  ```
+  
+  https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Intl/Segmenter
