--- a/语言文字.md
+++ b/语言文字.md
@@ -16,7 +16,7 @@
 
 # 分词
 
-```
+```javascript
   function tokenizeJA(text) {
     var it = Intl.v8BreakIterator(['ja-JP'], {type:'word'})
     it.adoptText(text)
