--- a/语言文字.md
+++ b/语言文字.md
@@ -14,7 +14,7 @@
 * 《实境图解新托业分类词汇》 作  者 : 林约瑟芬，陈昭纯著 出版日期 : 2018.04
 * 《最新英语口语必备 流行口语分类词汇》 作  者 : 张国海主编 出版日期 : 2000.09
 
-# 分词
+# 分词 chrome浏览器，nodejs
 
 ```javascript
   function tokenizeJA(text) {
