--- a/语言文字.md
+++ b/语言文字.md
@@ -38,3 +38,11 @@
   ```
   
   https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Intl/Segmenter
+
+```javascript
+const str = "我认为空间对于学习速度和表达方式也很有用。";
+const segmenterJa = new Intl.Segmenter('ja-JP', { granularity: 'word' });
+
+const segments = segmenterJa.segment(str);
+console.table(Array.from(segments));
+```
