--- a/汉字分词.md
+++ b/汉字分词.md
@@ -16,6 +16,8 @@
 
 # 分词 chrome浏览器，nodejs
 
+在chrome双击汉字自动翻译时发现能自动分词而找到。
+
 ```javascript
   function tokenizeJA(text) {
     var it = Intl.v8BreakIterator(['ja-JP'], {type:'word'})
