--- a/汉字分词.md
+++ b/汉字分词.md
@@ -54,3 +54,9 @@ const segmenterJa = new Intl.Segmenter('ja-JP', { granularity: 'word' });
 const segments = segmenterJa.segment(str);
 console.table(Array.from(segments));
 ```
+
+python分词 for icu4
+
+https://github.com/mingruimingrui/ICU-tokenizer
+
+https://github.com/tricinel/highlight-words
