--- a/经方@水之道.md
+++ b/经方@水之道.md
@@ -4,7 +4,11 @@
 
 人体的所有生命细胞都生活在人体的海洋中。
 
-人体排泄水只要两个主要通道，小便和汗，大便极少。
+人体排泄水只要两个主要通道，小便和汗，大便不算。
+
+人体排病也只有两个主要通道，小便和汗，大便不算。
+
+排病（排汗、排尿）（发汗、利小便）（汗解，下解）
 
 **太阳病发汗遂漏不止，其人恶风，小便难，四肢微急，难以屈伸者，桂枝加附子汤主之。 20 太阳**
 
@@ -19,3 +23,9 @@
 观察水在人体的循环和变化来理解分析仲景条文和用药，以水为中心来理解。
 
 无论是进食还是排泄，以及身体的细胞和微生物都依赖水的循环而存在，没有水，物质无法别吸收，没有水，白细胞寸步难行，没有水，细菌无法感染人体。
+
+而热量也必须在水中进行传递。
+
+表看汗，里看大小便。即看排泄通道，单用桂枝汤主表。脉浮主表，脉沉主里。
+
+桂枝本为解肌（用桂枝汤从肌而托之于表而解，所托之物可以为病毒，也可以为代谢产物等）
