--- a/游戏编程.md
+++ b/游戏编程.md
@@ -1,4 +1,4 @@
-首先要树立“面向状态”编程的世界观，这个思维从alpinejs而来，也是flutter的核心。定义状态有限，然后根据状态中的属性和方法进行绘制界面（样式和结构），游戏的话涉及到帧（快照）。
+首先要树立“面向状态”编程的世界观，这个思维从alpinejs而来，也是flutter的核心。优先定义状态，然后根据状态中的属性和方法进行绘制界面（样式和结构），游戏的话涉及到帧（快照）。
 
 https://www.youtube.com/watch?v=lgck-txzp9o
 
