--- a/五十音图.md
+++ b/五十音图.md
@@ -4,18 +4,18 @@
 
 ## 五十音图
 
-    あ　い　う　え　お　　　　ア　イ　ウ　エ　オ
-    か　き　く　け　こ　　　　カ　キ　ク　ケ　コ
-    さ　し　す　せ　そ　　　　サ　シ　ス　セ　ソ
-    た　ち　つ　て　と　　　　タ　チ　ツ　テ　ト
-    な　に　ぬ　ね　の　　　　ナ　ニ　ヌ　ネ　ノ
+    あ　い　う　え　お　　　　ア　イ　ウ　エ　オ　　　　a  i   u   e  o
+    か　き　く　け　こ　　　　カ　キ　ク　ケ　コ　　　　ka ki  ku  ke ko
+    さ　し　す　せ　そ　　　　サ　シ　ス　セ　ソ　　　　sa shi su  se so
+    た　ち　つ　て　と　　　　タ　チ　ツ　テ　ト　　　　ta chi tsu te to
+    な　に　ぬ　ね　の　　　　ナ　ニ　ヌ　ネ　ノ　　　　na ni  nu  ne no
 
-    は　ひ　ふ　へ　ほ　　　　ハ　ヒ　フ　ヘ　ホ
-    ま　み　む　め　も　　　　マ　ミ　ム　メ　モ
-    や　　　ゆ　　　よ　　　　ヤ　　　ユ　　　ヨ
-    ら　り　る　れ　ろ　　　　ラ　リ　ル　レ　ロ
-    わ　　　　　　　を　　　　ワ　　　　　　　ヲ
-    ん　　　　　　　　　　　　ン
+    は　ひ　ふ　へ　ほ　　　　ハ　ヒ　フ　ヘ　ホ　　　　wa hi  fu  e  ho
+    ま　み　む　め　も　　　　マ　ミ　ム　メ　モ　　　　ma mi  mu  me mo
+    や　　　ゆ　　　よ　　　　ヤ　　　ユ　　　ヨ　　　　ya     yu     yo
+    ら　り　る　れ　ろ　　　　ラ　リ　ル　レ　ロ　　　　ra ri  ru  re ro
+    わ　　　　　　　を　　　　ワ　　　　　　　ヲ　　　　wa            o
+    ん　　　　　　　　　　　　ン             　　　　n
 
 如何正确记住行的顺序：
 
