--- a/五十音图.md
+++ b/五十音图.md
@@ -30,6 +30,9 @@
 - 长音，促音，拗音，拗长音
 - 拨音
 
+![image](https://github.com/user-attachments/assets/48661cec-5bbc-43e7-af19-cb5217155ae8)
+
+
 ## 清音
 
 ### a 行
